@@ -1,7 +1,7 @@
 # Space Scaventure <img src="https://github.com/user-attachments/assets/84506eb9-1eda-4822-b45c-4e292880a4fe" width="35px">
 
 ## Introduction
-Space Scavenger is a space-themed adventure and survival game where players take on the role of an astronaut piloting a spacecraft on a crucial mission to travel from Earth to . However, with limited fuel that may not be sufficient for the entire journey, players must explore and collect space debris to convert it into energy fuel. Along the way, they will face numerous challenges and obstacles, making the journey more exciting and unpredictable.
+Space Scavenger is a space-themed adventure and survival game where players take on the role of an astronaut piloting a spacecraft on a crucial mission to travel from Earth to Saturn. However, with limited fuel that may not be sufficient for the entire journey, players must explore and collect space debris to convert it into energy fuel. Along the way, they will face numerous challenges and obstacles, making the journey more exciting and unpredictable.
 "Let's navigate the spaceship to Saturn for a grand mission!"
 
 ## Rules
@@ -75,33 +75,41 @@ The player has to control a spaceship, and your mission is to collect space debr
     </tr>
 </table>
 
-## Examples
+## Examples & To play this game
 - ### Home
 <img src="https://github.com/user-attachments/assets/2f5fd808-2ad3-4901-ab66-02eda7a0434b" width="500px;" height="350px">
 
-- ### Setting & Select levels
-<img src="https://github.com/user-attachments/assets/6aa4abe5-5aae-4013-8a27-c5c7c5bb15de" width="400px;" height="280px">
-
+- ### Select levels & How to play
 <img src="https://github.com/user-attachments/assets/ab042a98-3206-4360-94d6-e15c01cbe59c" width="400px;" height="280px">
-
-- ### How to play
 <img src="https://github.com/user-attachments/assets/9f64f932-d601-4101-8274-abc20e617040" width="400px;" height="280px">
 
-<img src="https://github.com/user-attachments/assets/0d86644a-c588-4a75-b486-9210de7cf6ed" width="400px;" height="280px">
-
-- ### Level 1-3
+- ### Game Lv.1 (see more in game!)
 <img src="https://github.com/user-attachments/assets/079b0d68-5562-47b0-9dd8-39b3b5306574" width="400px;" height="280px">
-
-<img src="https://github.com/user-attachments/assets/d86219e2-abc1-4d12-ae74-01402088593e" width="400px;" height="280px">
-
-<img src="https://github.com/user-attachments/assets/43913528-c189-4a98-8959-636dca2a44ee" width="400px;" height="280px">
-
-- ### Results
 <img src="https://github.com/user-attachments/assets/af97c084-cf60-4d62-af06-94b79a09d8ed" width="400px;" height="280px">
 
-<img src="https://github.com/user-attachments/assets/4ef0a4ea-1239-48a8-a5aa-b781cb5f0223" width="400px;" height="280px">
+### requirements:
 
-## Contributors `Group: DengNoey`
+IDE: Eclipse
+
+JDK >= 20.0.2
+
+Library: JavaFX
+
+### running commands
+Set your Virtual Machine Options in IntelliJ to the following
+
+```bash
+--module-path [path to javafx sdk's lib folder] --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media
+```
+To execute jar file run the following command:
+
+```bash
+java -jar [vm options] [path to .jar file]
+```
+
+#### Contributors `Group: DengNoey`
 - Aitsayaphan L. [gincole](https://github.com/gincole) `Main Dev`
-- Penpitcha P. [incluDna](https://github.com/incluDna)
+- Penpitcha P. [incluDna](https://github.com/incluDna) 
 - Sirikarn F. [nanamunt](https://github.com/nanamunt)
+
+If u find any bugs (for dev, if u know how to fix it, that would be even better), please let me know. -> [email](mailto:6733185821@student.chula.ac.th) 🥹🙇‍♀️
